--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="day1.css">
+    <link rel="stylesheet" href="./css/day1.css">
   </head>
   <body>
     <div>
@@ -36,7 +36,7 @@
 
 
     <div class="container2">
-      <img src="./sunglasses.jpg" alt="a man wearing sunglasses" />
+      <img src="./img/sunglasses.jpg" alt="a man wearing sunglasses" />
     </div>
 
       <aside></aside>
@@ -59,9 +59,9 @@
 </div>
 
 <div class="container4">
-  <img src="day.jpg" alt="glass">
-  <img src="day2.jpg" alt="glasses">
-  <img src="dayy.jpg" alt="glassess">
+  <img src="./img/day.jpg" alt="glass">
+  <img src="./img/day2.jpg" alt="glasses">
+  <img src="./img/dayy.jpg" alt="glassess">
 </div>
 
 <div class="container5">
