--- a/index.html
+++ b/index.html
@@ -69,7 +69,21 @@
   <p>$ 35.00 <ul><li> $ 56.00</li></ul> </p>
     </div>
   </div>
-    </header>
+</header>
+
+
+    <section>
+      <div class="container6">
+    <h3>Collection <br> and style for <br> everyone</h3>
+    <button>SHOP NOW</button>
+  </div>
+ 
+  <div class="container7">
+    <h4>About Denim</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet aliquid sit atque consequatur quam exercitationem corrupti sunt maiores, illo reiciendis laboriosam expedita dolores eos quod accusamus! Incidunt, quam quisquam!</p>
+  </div>
+</section>
+  </div>
     </div>
   </body>
 </html>
