--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/day1.css">
+    <link rel="stylesheet" href="./assets/css/day1.css">
   </head>
   <body>
     <div>
@@ -36,7 +36,7 @@
 
 
     <div class="container2">
-      <img src="./img/sunglasses.jpg" alt="a man wearing sunglasses" />
+      <img src="./assets/img/sunglasses.jpg" alt="a man wearing sunglasses" />
     </div>
 
       <aside></aside>
@@ -59,9 +59,9 @@
 </div>
 
 <div class="container4">
-  <img src="./img/day.jpg" alt="glass">
-  <img src="./img/day2.jpg" alt="glasses">
-  <img src="./img/dayy.jpg" alt="glassess">
+  <img src="./assets/img/day.jpg" alt="glass">
+  <img src="./assets/img/day2.jpg" alt="glasses">
+  <img src="./assets/img/dayy.jpg" alt="glassess">
 </div>
 
 <div class="container5">
@@ -79,11 +79,56 @@
   </div>
  
   <div class="container7">
-    <h4>About Denim</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet aliquid sit atque consequatur quam exercitationem corrupti sunt maiores, illo reiciendis laboriosam expedita dolores eos quod accusamus! Incidunt, quam quisquam!</p>
+    <h4><i>About Denim</i></h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet aliquid sit atque consequatur quam exercitationem corrupti sunt maiores, illo reiciendis laboriosam expedita dolores eos quod accusamus! Incidunt, quam quisquam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet aliquid sit atque consequatur quam exercitationem corrupti sunt maiores, illo reiciendis laboriosam expedita dolores eos quod accusamus! Incidunt, quam quisquam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet aliquid sit atque consequatur quam exercitationem corrupti sunt maiores, illo reiciendis laboriosam expedita dolores eos quod accusamus! Incidunt, quam quisquam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet aliquid sit atque consequatur quam exercitationem corrupti sunt maiores, illo reiciendis laboriosam expedita dolores eos quod accusamus! Incidunt, quam quisquam!Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur amet aliquid sit atque consequatur quam exercitationem corrupti sunt maiores, illo reiciendis</p>
   </div>
 </section>
-  </div>
-    </div>
+</div>
+
+<div class="newsletter">
+  <h4>Newsletter</h4>
+  <p>Be the first to get news about trends, promotion, and much more.</p>
+
+  <form action="">
+<input type="email" value="Enter you email address">
+<input type="button" value="SUBSCRIBE">
+  </form>
+  <p class="p2">By accepting you accept the <b>Privacy Policy!</b></p>
+</div>
+
+<footer>
+<div class="cont">
+<h5>DENIM</h5>
+<p>Lorem ip sum</p>
+<p>Lorem ipsum dolor, sit amet adipisicing elit. <br> ullam dolorum impedit expedita ad fugiat</p>
+
+<svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 448 512"><!-- Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
+<span>www.denim.com</span>
+</div>
+
+<table>
+  <tr>
+  <th>COMPANY</th>
+  <th>FAQS</th>
+</tr>
+
+<tr>
+  <td>About Denim</td>
+  <td>Information</td>
+</tr>
+
+<tr>
+  <td>Contact</td>
+  <td>Payment</td>
+</tr>
+<tr>
+  <td>Careers</td>
+  <td>Shipping</td>
+</tr>
+</table>
+
+</footer>
+</div>
+
   </body>
 </html>
